dodao primer za operator

--- a/02-c#-blazor-simple-app/BlazorApp1/Client/Pages/0103Sequence.razor
+++ b/02-c#-blazor-simple-app/BlazorApp1/Client/Pages/0103Sequence.razor
@@ -1,6 +1,6 @@
 ﻿@page "/0103sequence"
 
-<PageTitle>Hello World multi line</PageTitle>
+<PageTitle>Sequence</PageTitle>
 
 <button @onclick="Execute">Do It!</button>
 
