--- a/02-c#-blazor-simple-app/BlazorApp1/Client/Pages/0103Sequence.razor
+++ b/02-c#-blazor-simple-app/BlazorApp1/Client/Pages/0103Sequence.razor
@@ -15,7 +15,7 @@
 
     private void Execute()
     {
-        message = "Hello world!!!" + Environment.NewLine;
+        message = message + "Hello world!!!" + Environment.NewLine;
         message = message + "Hello World, again!" + Environment.NewLine;
         message = message + "Hello World, once again!" + Environment.NewLine;
         message = message + "Goodbye.";
