--- a/02-c#-blazor-simple-app/BlazorApp1/Client/Pages/0103Sequence.razor
+++ b/02-c#-blazor-simple-app/BlazorApp1/Client/Pages/0103Sequence.razor
@@ -1,10 +1,11 @@
 ﻿@page "/0103sequence"
 
 <PageTitle>Sequence</PageTitle>
-
+<h1>Sequence</h1>
 <br/>
 <button @onclick="Execute">Do It!</button>
 <br/>
+Output:
 <br/>
 <div style="border:solid; border-color:black">
   <pre>@message</pre>
@@ -18,6 +19,6 @@
         message = message + "Hello world!!!" + Environment.NewLine;
         message = message + "Hello World, again!" + Environment.NewLine;
         message = message + "Hello World, once again!" + Environment.NewLine;
-        message = message + "Goodbye.";
+        message = message + "Goodbye." + Environment.NewLine; ;
     }
 }
